Add student-category relationship and enhance topic and category management:
- Introduced `GetCategoriesByStudentUseCase` to retrieve categories through student subscriptions.
- Added `topics_students` join table with database migration.
- Updated `Category` and `Topic` domain models to include student lists.
- Implemented repository queries and mappers to handle student-related operations.
- Adjusted category and topic creation/edit flows to incorporate student associations.
- Improved validation and error handling for names and emails with max length checks.
- Added unit and integration tests for topics, categories, and students.